added table to .HTML to manage alignment of elements.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
                 <li><a href="https://mail.google.com/mail/">Gmail</a></li>
              </ol>
         </div>
-
-        <div class="logo">
-            <img src="images\google-logo.gif" alt="google">
-        </div>
-        <div class="everything">
-            <table class="contents">
-            <tr><td span="2"><input class="search-box" type="text" max-length="2048"></td></tr>
-            </table>
-
-            <table class="buttons">
-            <tr><td><input class="search-button" type="button" value="search" aria-label="Search Google"></td>
-            <td><input class="feel-lucky" type="button" value="lucky" aria-label="Feeling Luck?"></td></tr>
+        <table class="contents">
+            <tbody>
+                <tr>
+                    <td><img src="images\glogo.jpg" alt="google logo" class="logo"></td></tr>
+                <tr>
+                    <td span="2"><input class="search-box" type="text" max-length="2048" placeholder="Google Search"></td>
+                </tr>
+                <tr>
+                    <td>
+                        <form>
+                        <input class="search-button" type="button" value="search" aria-label="Search Google">
+                        <input class="feel-lucky" type="button" value="lucky" aria-label="Feeling Luck?">
+                        </form>
+                    </td>
+                </tr>
+            </tbody>
             </table>
         </div>
         <div class="offering">
